Minor fixes through §§3–6

--- a/Non-essentialist, activity-grounded lifeforms.tex
+++ b/Non-essentialist, activity-grounded lifeforms.tex
@@ -125,17 +125,17 @@ Of course we \dash and I'll restrict the phrasing to the human case here, for th
 
 I take it that instituting such restrictions is precisely what's going on in passages such as the discussion in E4p35: what gets included in the human lifeform are those things for which a particular set of activities is most useful. Thus, all those singular things for which humane activities are most useful are what we call \enquote{human}. By contrast, a blanket is very useful for keeping me warm, which is indeed a very useful thing to do, but its usefulness doesn't extend much beyond that; having only a limited degree of usefulness to me, of agreement with me, the blanket doesn't share my lifeform.
 
-Furthermore, I don't offer much utility to a blanket; if I happen to further its conatus, that is more or less incidental (there's little I do for a blanket \dash perhaps I wash it from time to time, but that's probably more to its own detriment than anything, damaging its fibres and its weave until it eventually falls apart). Humans, on the other hand, are precisely those things which do a lot that's useful for me, and for which I do a lot that's useful\footnote{Which is absolutely not to say that I, specifically, am a great boon to humanity (or rather, any greater than anyone else, since any human is effectively defined as that which is a boon to humanity) \dash just that the things I do qua human are things that are useful to humans. The more natural way to express this would be in terms of what I, or humans, \emph{can} do, but that phrasing would imply that capacities are at stake; for an activity-priority reading to work, it has to rely on actual activities.} \dash not becomes of some prior essence, but because, on this conception, humans are defined as \emph{whatever fits that description}.
+Furthermore, I don't offer much utility to a blanket; if I happen to further its conatus, it's more or less incidental (there's little I do for a blanket \dash perhaps I wash it from time to time, but that's probably more to its own detriment than anything, damaging its fibres and its weave until it eventually falls apart). Humans, on the other hand, are precisely those things which do a lot that's useful for me, and for which I do a lot that's useful\footnote{Which is absolutely not to say that I, specifically, am a great boon to humanity (or rather, any greater than anyone else, since any human is effectively defined as that which is a boon to humanity) \dash just that the things I do qua human are by definition things that are useful to humans. The more natural way to express this would be in terms of what I, or humans, \emph{can} do, but that phrasing would imply that capacities are at stake; for an activity-priority reading to work, it has to rely on actual activities.} \dash not becomes of some prior essence, but because, on this conception, humans are defined as \emph{whatever fits that description}.
 
-There are cases of greater mutual usefulness than in the blanket case. Humans might well interact with, say, trees, and might well do so in broadly mutually beneficial ways (trees might provide humans with fruit or wood, or simply oxygen; humans might plant or graft trees, and protect them from disease, and, by eating their fruit, distribute their seeds; and so on). The case is somewhat less asymmetrical as compared to the blanket case, but the utility of trees for humans is still within a fairly restricted domain, so tree-ish activities are unlikely to be maximally useful to humans. By the same token, humane activities are probably not going to be maximally useful to trees (we cut them down to obtain material that's useful to us, after all).
+There are cases of greater mutual usefulness than in the blanket case. Humans might well interact with, say, trees, and might well do so in broadly mutually beneficial ways (trees might provide humans with fruit or wood, or simply oxygen; humans might plant or graft trees, protect them from disease, provide them with carbon dioxide, and, by eating their fruit, distribute their seeds; and so on). The case is somewhat less asymmetrical as compared to the blanket case, but the utility of trees for humans is still within a fairly restricted domain, so tree-ish activities are unlikely to be maximally useful to humans. By the same token, humane activities are probably not going to be maximally useful to trees (we cut them down to obtain material that's useful to us, after all).
 
-In order to proper restrict what is included in a lifeform, and to get the reciprocality implied by \textquote[E4p35c1; my emphasis]{there is nothing more useful to \emph{man} than \emph{man}} right, then, the utility needs to be not only maximal or mutual, but \emph{mutually maximal}.
+In order to properly restrict what is included in a lifeform, then, and to get the reciprocality implied by \textquote[E4p35c1; my emphasis]{there is nothing more useful to \emph{man} than \emph{man}} right, the utility needs to be not only maximal or mutual, but \emph{mutually maximal}.
 
 To be clear, the point here is not that there is some set of singular things called humans that are predisposed to maximally benefit from some set of humane activities. Rather, the set of humans is picked out by the set of activities in which they mutually find maximal utility. There needn't be any separate, particular, pre-existing property in the singular thing in virtue of which it benefits most from certain activities in order for a notion of lifeform construed in this way to work: satisfaction of maximal usefulness is, presumably, going to be multiply realisable at, say, the morphological level \dash as I go over in more detail in \cref{sec:ObjMorphology}.
 
-In this way, agreement gets cashed out not in terms of shared common properties, but it terms of a distinct state of affairs that obtains \emph{at} each member of the lifeform, but \emph{in relation to} other members of the lifeform. When some singular thing $x$ finds mutual maximal usefulness with $y$, $z$, \dots{}, that is a determinate state of affairs for $x$, rather than some universal that transcends $x$. This produces a notion of lifeform that quantifies across all its members without contravening the interdiction against commonality pertaining to the essence of a singular thing in E3p36.
+In this way, agreement gets cashed out not in terms of shared common properties, but in terms of a distinct state of affairs that obtains \emph{at} each member of the lifeform, but \emph{in relation to} other members of the lifeform. When some singular thing $x$ finds mutual maximal usefulness with $y$, $z$, \dots{}, that is a determinate state of affairs for $x$, rather than some universal that transcends $x$. This produces a notion of lifeform that quantifies across all its members without contravening the interdiction against commonality pertaining to the essence of a singular things in E2p37.
 
-What matters for the notion of lifeform are the mutually maximally useful \dash with respect to both the agents and patients involved \dash activities. The big advantage of an activity-priority notion over a morphology-priority notion of lifeform is that the former has a criterion of identification built in. Morphology-priority notions end up having to rely on extrinsic denominations to produce lifeform groupings. For an activity-priority notion, maximal agreement, in terms of maximal mutual usefulness, serves as the identity criterion. It's non-ad hoc, and it's objective, insofar as it involves what actually is maximally useful.\footnote{In this way, an activity-priority reading allows for robust error conditions in identifying lifeforms: you can be wrong in judging about the identity of a lifeform if you are wrong about what is actually in maximal mutual agreement.}
+What matters for the notion of lifeform are the mutually maximally useful \dash with respect to both the agents and patients involved \dash activities. The big advantage of an activity-priority notion over a morphology-priority notion of lifeform is that the former has a criterion of identification built in. Morphology-priority notions presumably end up having to rely on extrinsic denominations to produce lifeform groupings. For an activity-priority notion, maximal agreement, in terms of maximal mutual usefulness, serves as the identity criterion. It's non-ad hoc, and it's objective, insofar as it involves what actually is maximally useful.\footnote{In this way, an activity-priority reading allows for robust error conditions in identifying lifeforms: you can be wrong in judging about the identity of a lifeform if you are wrong about what is actually in maximal mutual agreement.}
 
 % On the issue of agreement, E4p35c1 refers back to E4p31c: \textquote[][.]{\emph{Insofar as a thing agrees with our nature, it is necessarily good}}
 
@@ -150,7 +150,7 @@ What matters for the notion of lifeform are the mutually maximally useful \dash 
 
 \section{What about morphology?}\label{sec:ObjMorphology}
 
-There's an intuitive plausibility to grounding lifeforms in morphology. Informally, we tend to identify such things by their superficial morphology, such that it's possible to be surprised that a whale is mammal rather than a very large fish, or that a pumpkin is a berry while a strawberry is, in fact, not. Of course, \enquote{correct}, scientific, species identification will tend to refer to \enquote{deeper} morphological features\footnote{I say \enquote{tend to} because morphology isn't the only resource used by biologists to make taxonomic distinctions. Etiology is relevant, e.g., and DNA is frequently appealed to (we might want to argue that DNA is just a low-level morphology, but it is not on the phenotypic level that we usually refer to as \enquote{morphology}). Moreover, activities themselves have significant roles to play: \emph{giving birth to live young} vs \emph{laying eggs}, for instance, might supervene on certain morphological features, but it's the activities that get appealed to in making the distinctions, and not the morphology.} that override the misleading superficial morphology \dash thus, a whale is not a fish, because it lacks gills (amongst other reasons). An obvious objection to an activity-priority conception of lifeform is that it fails to preserve our intuitions about the centrality of morphology.
+There's an intuitive plausibility to grounding lifeforms in morphology that seems to get lost on an activity-priority conception. Informally, we tend to identify such things by their superficial morphology, such that it's possible to be surprised that a whale is mammal rather than a very large fish, or that a pumpkin is a berry while a strawberry is, in fact, not. Of course, \enquote{correct}, scientific, species identification will tend to refer to \enquote{deeper} morphological features\footnote{I say \enquote{tend to} because morphology isn't the only resource used by biologists to make taxonomic distinctions. Etiology is relevant, e.g., and DNA is frequently appealed to (we might want to argue that DNA is just a low-level morphology, but it is not on the phenotypic level that we usually refer to as \enquote{morphology}). Moreover, activities themselves have significant roles to play: \emph{giving birth to live young} vs \emph{laying eggs}, for instance, might supervene on certain morphological features, but it's the activities that get appealed to in making the distinctions, and not the morphology.} that override the misleading superficial morphology \dash thus, a whale is not a fish, because it lacks gills (amongst other reasons). An obvious objection to an activity-priority conception of lifeform is that it fails to preserve our intuitions about the centrality of morphology.
 
 In itself, this is a fairly toothless objection, in that there is little reason to suppose that a conception of lifeform needs to preserve those intuitions; indeed, it's precisely the point here to look at an alternative to the received view. But it does raise the issue of where exactly morphology is supposed to fit into this model.
 
@@ -171,7 +171,7 @@ Interestingly, though, the activity-priority conception does preserve the initia
 }
 On Simpson's account, whales seem like strange mammals because of what they do, and the ways in which they do it, in accordance with a \textquote{completely aquatic life} \dash we might say that, despite certain morphological similarities with land-dwelling species that we classify as mammalian, whales have an aquatic kind of lifeform.
 
-One upshot that we can see quite clearly from both the culinary and the whale cases is that the activities that are salient for a lifeform are multiply realisable through the morphological level. Culinary-vegetable activities can be produced by both botanical-vegetable morphologies and botanical-fruit morphologies; the activities of an aquatic kind of lifeform can be produced by both fish morphologies and mammalian morphologies. That is to say, things can, in principle, maximally agree in their activities while differing significantly in their morphologies.
+One upshot that we can see quite clearly from both the culinary and the cetacean cases is that the activities that are salient for a lifeform are multiply realisable through the morphological level. Culinary-vegetable activities can be produced by both botanical-vegetable morphologies and botanical-fruit morphologies; the activities of an aquatic kind of lifeform can be produced by both fish morphologies and mammalian morphologies. That is to say, things can, in principle, maximally agree in their activities while differing significantly in their morphologies.
 
 This means that we can maintain a lifeform without having to be be concerned about exactly where morphologies fall, or where to draw the boundaries, within the continuum of Spinoza's gradualist model. It even allows privation cases to be dealt with elegantly. On a morphology-priority conception, when some putative member $x$ of a lifeform $K$ lacks some definitive morphological feature, retaining $x$ within $K$ is not a straightforward problem to solve.
 
