--- a/Non-essentialist, activity-grounded lifeforms.tex
+++ b/Non-essentialist, activity-grounded lifeforms.tex
@@ -178,13 +178,11 @@ This means that we can maintain a lifeform without having to be be concerned abo
 On an activity-priority conception, however, as long as the activities that $x$ \emph{does} perform maximally agree with those performed by the population of $K$, and as long as the activities performed by the population of $K$ maximally agree with those performed by $x$, then $x$ is still a member of $K$; this holds both if $x$ realises the activities through different means and if $x$ cannot produce certain activities at all \dash the member-of-$K$ relation obtains just in case of maximal agreement with the activities that $x$ does indeed produce. In other words, not every member of a lifeform needs to yield every activity of the lifeform, because lifeform-membership gets maintained through yielding proper subsets of lifeform activities.
 
 \section{Conclusion}\label{sec:Conclusion}
-Activity-priority reading of lifeform.
+Appeal to lifeforms is an informative and productive means of explaining the activities of things. It's also a means that Spinoza helps himself to, at various points. On the face of it, though, it's not clear that he is entitled to make use of lifeforms, at least not in an explanatory capacity, given the restrictions his system imposes on universals, commonalities in the essences of singular things, and boundaries in the continuum of bodily complexity. What those restrictions amount to, however, is simply a rejection of essentialism in the contexts at stake. If Spinoza does make use of a coherent conception of lifeform, then, it must be a non-essentialist one.
 
-It's a viable reading in Spinoza's system.
+I've argued that Spinoza's system does indeed have the resource for such a conception of lifeform. On this reading, Spinozistic lifeforms needn't, and are not, grounded in some pre-existing essence; rather, they are grounded in the activities that lifeforms perform, and are subject to. This provides a conception of lifeform that does not violate the restrictions of the system, and that has its criterion of identity inbuilt, through the fact of mutual maximal usefulness, which obtains at each member of a lifeform, rather than having to be located in some (impossible) universal entity or some (inadmissible) common feature. This amounts to a conception that fulfils the action-theoretic requirements but circumvents the usual essentialist commitments, being intrinsically mutable\todo{I guess I ought to add more about mutability in the body of the paper} and multiply realisable at pre-existing (e.g., morphological) levels.
 
-Provides a non-essentialist conception of lifeform.
-
-\printbibliography
+\printbibliography{}
 \end{document}
 
 % Local Variables:
