Minor change in phrasing

--- a/Non-essentialist, activity-grounded lifeforms.tex
+++ b/Non-essentialist, activity-grounded lifeforms.tex
@@ -180,7 +180,7 @@ On an activity-priority conception, however, as long as the activities that $x$ 
 \section{Conclusion}\label{sec:Conclusion}
 Appeal to lifeforms is an informative and productive means of explaining the activities of things. It's also a means that Spinoza helps himself to, at various points. On the face of it, though, it's not clear that he is entitled to make use of lifeforms, at least not in an explanatory capacity, given the restrictions his system imposes on universals, commonalities in the essences of singular things, and boundaries in the continuum of bodily complexity. What those restrictions amount to, however, is simply a rejection of essentialism in the contexts at stake. If Spinoza does make use of a coherent conception of lifeform, then, it must be a non-essentialist one.
 
-I've argued that Spinoza's system does indeed have the resource for such a conception of lifeform. On this reading, Spinozistic lifeforms needn't, and are not, grounded in some pre-existing essence; rather, they are grounded in the activities that lifeforms perform, and are subject to. This provides a conception of lifeform that does not violate the restrictions of the system, and that has its criterion of identity inbuilt, through the fact of mutual maximal usefulness, which obtains at each member of a lifeform, rather than having to be located in some (impossible) universal entity or some (inadmissible) common feature. This amounts to a conception that fulfils the action-theoretic requirements but circumvents the usual essentialist commitments, being intrinsically mutable\todo{I guess I ought to add more about mutability in the body of the paper} and multiply realisable at pre-existing (e.g., morphological) levels.
+I've argued that Spinoza's system does indeed have the resource for such a conception of lifeform. On this reading, Spinozistic lifeforms needn't, and are not, grounded in some pre-existing essence; rather, they are grounded in the activities that lifeforms perform, and are subject to. This provides a conception of lifeform that does not violate the restrictions of the system, and that has its criterion of identity inbuilt, through the fact of mutual maximal usefulness, which obtains at each member of a lifeform, rather than having to be located in some (impossible) universal entity or some (inadmissible) common feature. This amounts to a conception that fulfils the action-theoretic requirements but circumvents the usual essentialist commitments, being intrinsically mutable\todo{I guess I ought to add more about mutability in the body of the paper} and multiply realisable through other (e.g., morphological) levels.
 
 \printbibliography{}
 \end{document}
