Added some references

--- a/neagl.bib
+++ b/neagl.bib
@@ -1,3 +1,22 @@
+@Book{Bennett:1984,
+  author    = {Jonathan Bennett},
+  title     = {A Study of {S}pinoza’s {E}thics},
+  date      = {1984},
+  publisher = {Hackett},
+  location  = {Indianapolis},
+}
+
+@InCollection{DellaRocca:1996,
+  author    = {Della Rocca, Michael},
+  title     = {{S}pinoza’s Metaphysical Psychology},
+  date      = {1996},
+  booktitle = {The Cambridge Companion to Spinoza},
+  editor    = {Don Garrett},
+  publisher = {Cambridge University Press},
+  location  = {Cambridge},
+  pages     = {192-266},
+}
+
 @Article{Illari&Williamson:2013,
   year    = {2013},
   title   = {In Defence of Activities},
@@ -105,6 +124,13 @@
   volume  = {19},
 }
 
+@Book{Viljanen:2011,
+  author          = {Valtteri Viljanen},
+  title           = {{S}pinoza's Geometry of Power},
+  date            = {2011},
+  publisher    = {Cambridge University Press},
+  location     = {Cambridge},
+}
 
 @InCollection{Williams:2019,
   author    = {Williams, Caroline},
