Added disclaimer about current draft status

--- a/Non-essentialist, activity-grounded lifeforms.tex
+++ b/Non-essentialist, activity-grounded lifeforms.tex
@@ -25,10 +25,19 @@
 
 \title{Non-essentialist, activity-grounded lifeforms}
 \author{Barnaby R. Hutchins}
+\date{}
 
 \begin{document}
 
 \maketitle
+
+\begin{center}
+  \vspace{1.0cm}
+
+  \textit{\textbf{About the draft}: This is very preliminary \dash it's missing a bunch of references, and generally proper engagement with the literature, and there's a couple of (marked) points that I'm already pretty sure need to be addressed further, and I'm certain there are plenty more that I don't know about yet.}
+
+  \vspace{1.5cm}
+\end{center}
 
 \begin{abstract}
 If we're looking for the grounds for a notion of lifeform in Spinoza's system, it might seem that the natural place to look, given his ontology, would be in the morphology of bodies, with action and ethics in turn grounded in that lifeform. Spinoza rejects anything like substantial forms that might be capable of imparting something like a species essence to individual things; if there's a difference between, e.g., humans and horses to be found, it makes sense to look for it in the seemingly obvious morphological differences. On such an interpretation, a horse has, and acts on, a specifically \textquote[E3p57s]{equine lust} just because it has a specifically equine morphology; similarly, humans are what's most useful for humans, and the activities of a human maximally \enquote{agree}  with the activities of other humans (E4p35c1), just because of their shared human morphology. A morphology-grounded reading, however, runs into serious issues when faced with Spinoza's treatment of bodies, chiefly because his ontology lacks the resources for a sufficiently robust speciation of morphologies.
@@ -92,7 +101,7 @@ What E4app\RN{9} is summarising is E4p35c1: \blockquote[E4p35c1]{what is most us
 Now, admittedly, (a) does, on the face of it, look like the more promising option in light of the text: the discussion of agreement in E4p35 is tied to reason, and reason is ultimately tied to a thing's own essence, such that, when a thing acts from reason, it acts from what's inherent to it (E3p4–7). On top of that, in the second corollary to E4p35, Spinoza explicitly equates usefulness to egoism: \textquote{\textins*{w}hen each man most seeks his own advantage for himself, then men are most useful to one another}, where a person's seeking their own advantage consists in \textquote{acting according to the laws of his own nature}. This does sound as though usefulness is being explained in terms of agreement, and agreement in terms of similarity in some pre-existing essence.
 
 However, the essence, or nature, in question here is the \enquote{actual essence} of the thing, or its conatus (E3p7).\footnote{I'm concerned here only with actual essence, and am leaving aside the issue of whether there is a \enquote{formal essence} beyond the actual essence. See, e.g., \cites{Laerke:2017,Nadler:2012,Ward:2011}.}
-The conatus of a thing is active and dynamic; it's the \textquote[E3p7]{power of each thing, \emph{or} the striving by which it (either alone or with others) does anything, or strives to do anything}, which is merely \enquote{distinguished by reason, or rather verbally}, and is not \textquote[CM 1/6; G \RN{1}/248; {\cite[314]{C1}}]{in any way really distinct}, from the thing, or the essence thereof, itself.\footnote{On the dynamic reading of the conatus, see, e.g., \cites{Williams:2019}[][Part 4, ch. 13]{RenzExplainability}; for contrasting readings, see, e.g., \cites{Bennett:1984}{DellaRocca:1996}{Viljanen:2011}.}\todo{Add more refs}
+The conatus of a thing is active and dynamic; it's the \textquote[E3p7]{power of each thing, \emph{or} the striving by which it (either alone or with others) does anything, or strives to do anything}, which is merely \enquote{distinguished by reason, or rather verbally}, and is not \textquote[CM 1/6; G \RN{1}/248; {\cite[314]{C1}}]{in any way really distinct}, from the thing, or the essence thereof, itself.\footnote{On the dynamic reading of the conatus, see, e.g., \cites{Williams:2019}[][Part 4, ch. 13]{RenzExplainability}; for contrasting readings, see, e.g., \cites{Bennett:1984}{DellaRocca:1996}{Viljanen:2011}.}
 
 The point here is that a thing's actual essence is not ontologically distinct from its activity: there is no pre-existing essence that subsequently determines activity; rather, acting in such-and-such a way just is having such-and-such an essence, and having such-and-such an essence just is acting in such-and-such a way. In which case, the actual essence cannot be ontologically, or logically, prior to the activity, and neither of the two can be \emph{the} explanation of the other \dash what you are does explain what you do, but only insofar as what you do explains what you are.
 
