Added a comment on shared features

--- a/Non-essentialist, activity-grounded lifeforms.tex
+++ b/Non-essentialist, activity-grounded lifeforms.tex
@@ -191,6 +191,8 @@ Appeal to lifeforms is an informative and productive means of explaining the act
 
 I've argued that Spinoza's system does indeed have the resources for such a conception of lifeform. On this reading, Spinozistic lifeforms needn't, and are not, grounded in some pre-existing essence; rather, they are grounded in the activities that lifeforms perform, and are subject to. This provides a conception of lifeform that does not violate the restrictions of the system, and that has its criterion of identity inbuilt, through the fact of mutual maximal usefulness, which obtains at each member of a lifeform, rather than having to be located in some (impossible) universal entity or some (inadmissible) common feature. This amounts to a conception that fulfils the action-theoretic requirements of lifeforms, but circumvents the usual essentialist commitments, being intrinsically mutable\todo{I guess I ought to add more about mutability in the body of the paper} and multiply realisable through other (e.g., morphological) levels.
 
+% Spinoza does use \enquote{agree in nature} to refer to shared features, but this can't do the work required for a notion of lifeform. First, given E2P37, shared features can't enter into the essences of singular things, so lifeforms construed in this way can't have the relations with singular essences that we'd want. Second, the gradualism problem applies: Spinoza's system doesn't have the resources to designate regions of the continuum as lifeforms with sufficient rigidity. Third \dash and this is less directly grounded in Spinoza, admittedly \dash there are good reasons to think that activities are the difference-makers in action-theoretic contexts, with it being irrelevant how exactly those features are realised (i.e., multiple realisability; see \cref{sec:ObjMorphology}).
+
 \printbibliography{}
 \end{document}
 
