Added missing pages and dois to bibliography

--- a/neagl.bib
+++ b/neagl.bib
@@ -23,7 +23,7 @@
   author  = {Illari, Phyllis and Williamson, Jon},
   journal = {Journal for General Philosophy of Science},
   doi     = {10.1007/s10838-013-9217-5},
-  pages   = {69 83},
+  pages   = {69-83},
   number  = {1},
   volume  = {44},
 }
@@ -36,6 +36,7 @@
   editor    = {Sinclair, Mark},
   publisher = {Oxford University Press},
   doi       = {10.1093/oso/9780198786436.003.0002},
+  pages     = {11-44}
 }
 
 @InCollection{Nadler:2012,
@@ -143,4 +144,5 @@
   publisher = {Edinburgh University Press},
   location  = {Edinburgh},
   pages     = {115--131},
+  doi       = {10.1515/9781474419703-009}
 }
